--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -10,6 +10,8 @@
     <!-- Site-specific CSS -->
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/SalonCruella.styles.css" asp-append-version="true" />
+    <!-- Admin Panel CSS -->
+    <link rel="stylesheet" href="~/css/admin-panel.css" asp-append-version="true" />
 
     <!-- Flatpickr CSS for Time Picker -->
     <link href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css" rel="stylesheet" />
