--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -11,22 +11,22 @@
         <h2>Giriş Yap</h2>
         <form asp-route-returnurl="@ViewData["ReturnUrl"]" method="post">
             <div class="form-group">
-                <label asp-for="Input.Email"></label>
-                <input asp-for="Input.Email" class="form-control" />
+                <label asp-for="Input.Email">E-posta</label>
+                <input asp-for="Input.Email" class="form-control" placeholder="E-posta adresinizi girin" />
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Input.Password"></label>
-                <input asp-for="Input.Password" class="form-control" type="password" />
+                <label asp-for="Input.Password">Şifre</label>
+                <input asp-for="Input.Password" class="form-control" type="password" placeholder="Şifrenizi girin" />
                 <span asp-validation-for="Input.Password" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <div class="form-check">
                     <input asp-for="Input.RememberMe" class="form-check-input" />
-                    <label asp-for="Input.RememberMe" class="form-check-label"></label>
+                    <label asp-for="Input.RememberMe" class="form-check-label">Beni hatırla</label>
                 </div>
             </div>
-            <button type="submit" class="btn btn-primary btn-block">login</button>
+            <button type="submit" class="btn btn-primary btn-block">Giriş Yap</button>
         </form>
         <div class="links">
             <a asp-controller="Account" asp-action="ForgotPassword">Şifrenizi mi unuttunuz?</a>
